<resources>
    <string name="app_name">Job Finder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_fragment_start">Start</string>
    <string name="tag_fragment_register">Register Fragment</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="login">Log In</string>
    <string name="name">Name</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="or">OR</string>
    <string name="log_in_here">Log in here</string>
    <string name="hint_phone">Phone</string>
    <string name="tag_fragment_login">Login fragment</string>
    <string name="title_activity_individual">IndividualActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tag_choose_fragment">Choose Fragment</string>
    <string name="experience">Experience a personalized job seeking experience journey towards your dream job</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="business">Business</string>
    <string name="individual">Individual</string>
    <string name="title_activity_business">BusinessActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tag_fragment_home">Home Fragment</string>
    <string name="tag_fragment_profile">Profile Fragment</string>
    <string name="tag_fragment_jobs">Jobs Fragment</string>
    <string name="tag_fragment_alert">Alert Fragment</string>
    <string name="title_activity_b_o">BOActivity</string>
    <string name="login_with_google">Login With Google</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="login_with_twitter">Login With Twitter</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="enter_business_name">Enter bsiness name</string>
    <string name="enter_phone_no">Enter phone no</string>
    <string name="business_name">Business name</string>

    <!--     database nodes     -->
    <string name="dbnode_jobs">jobs</string>
    <string name="db_subnode_level">level</string>
    <string name="dbnode_users">users</string>

    <!--     database fields    -->
    <string name="field_creator_id">creator_id</string>
    <string name="field_security_level">security_level</string>
    <string name="field_email">email</string>
    <string name="field_name">name</string>
    <string name="field_phone">phone</string>
    <string name="field_user_id">user_id</string>
    <string name="field_timestamp">timestamp</string>


    <string name="first_time_user_message">Hey there! Welcome to Job Finder.\nPlease input your details in your profile section\nBy clicking \"agree\", you accept our terms of use and condition.</string>
    <string name="first_time_open_user_message">Hey there!\nWelcome once again to Job Finder. You can edit your details here at anytime.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="help_and_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="actions">Actions</string>
    <string name="business_phone">Business Phone</string>
    <string name="enter_business_phone">Enter business phone</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phone">Enter phone</string>

</resources>