<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/contactFragment"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/helpFragment"
            android:icon="@drawable/ic_help"
            android:title="@string/help_and_feedback" />

        <item android:title="@string/actions">
            <menu>
                <group
                    android:id="@+id/group_actions"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_sign_out"
                        android:icon="@drawable/ic_logout"
                        android:title="@string/sign_out" />
                    <item
                        android:id="@+id/settingsFragment"
                        android:icon="@drawable/ic_settings"
                        android:title="@string/settings" />
                </group>
            </menu>
        </item>
    </group>

</menu>