<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/alert_dialog_bg">

        <TextView
            android:id="@+id/tv_change_phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            tools:text="@string/enter_phone_no"
            app:layout_constraintBottom_toTopOf="@+id/et_change_phone_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_save_phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            android:textColor="@color/accentGreen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_change_phone_layout" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/cancel"
            android:textColor="@color/accentGreen"
            app:layout_constraintEnd_toStartOf="@+id/tv_save_phone_no"
            app:layout_constraintTop_toTopOf="@+id/tv_save_phone_no" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_change_phone_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/phone"
            app:boxBackgroundColor="#FFFFFF"
            app:boxBackgroundMode="outline"
            app:boxCollapsedPaddingTop="4dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/primaryGreen"
            app:layout_constraintBottom_toTopOf="@+id/tv_save_phone_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_change_phone_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_change_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/phone"
                android:ems="10"
                android:inputType="phone"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:textInputLayoutFocusedRectEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
